--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -15,7 +15,7 @@
 
             <div>
                 <ul class="navbar-nav mr-auto">
-                    <a class="nav-link" href="{% template TSW2/index.html %}">Home</a>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </ul>
             </div>
         </nav>
