got title headers working

--- a/finalProject/TSW2/templates/TSW2/index.html
+++ b/finalProject/TSW2/templates/TSW2/index.html
@@ -2,5 +2,8 @@
 {% load static %}
 
 {% block body %}
-    <h1>HomePage</h1>
+    <div class="titleDivs">
+        <h1 class="titles">HomePage</h1>
+    </div>
+    
 {% endblock %}
