--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'TSW2/styles.css' %}" rel="stylesheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         {% block script %}
         {% endblock %}
     </head>
@@ -20,7 +22,7 @@
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'comparison' %}">Gameplay VS Real Life Comparison</a>
+                        <a class="nav-link" href="{% url 'comparison' %}">Gameplay VS Reality</a>
                     </li>
                     
                 </ul>
