made ome changes

--- a/finalProject/TSW2/templates/TSW2/comparison.html
+++ b/finalProject/TSW2/templates/TSW2/comparison.html
@@ -5,8 +5,8 @@
     <div class="titleDivs">
         <img src="https://i.ytimg.com/vi/S49CN57Y58o/maxresdefault.jpg" class="bgImg">
 
-        <div class="miniTitleDiv">
-            <h1 class="titles">Gameplay V.S. Reality</h1>
+        <div class="miniTitleDiv" style="margin-left: 60%; margin-bottom: 50px;">
+            <h1 class="titles" style="margin-top:15px; margin-left: 25px;">Gameplay V.S. Reality</h1>
         </div>
     </div>
     <br>
