--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -26,14 +26,15 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: auto;
+    height: 150%;
+    object-fit: contain;
 }
 
 .miniTitleDiv {
     position: relative;
     background-color: #8f8f8f;
-    width: 1000px;
-    height: 200px;
+    width: 500px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
