made some changes to background color and updated font color

--- a/finalProject/TSW2/templates/TSW2/comparison.html
+++ b/finalProject/TSW2/templates/TSW2/comparison.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <div class="titleDivs">
-        <img src="https://i.ytimg.com/vi/S49CN57Y58o/maxresdefault.jpg" class="bgImg">
+        <img src="https://www.dropbox.com/s/5vsm3h09n7z32r1/GvR.png?dl=0" class="bgImg">
 
         <div class="miniTitleDiv" style="margin-left: 60%; margin-bottom: 50px;">
             <h1 class="titles" style="margin-top:15px; margin-left: 25px;">Gameplay V.S. Reality</h1>
@@ -27,43 +27,46 @@
     
     <br>
     <br>
-    <hr style="background-color:white; width:80%">
+    <hr style="background-color:rgb(248, 239, 207); width: 90%">
     <br>
     <br>
 
-
-    <div class="articleContainer">
-        <h2 class="articleHeaders">Engine Comparison:</h2>
-    </div>
-    <br>
-    <div class="articleContainer">
-        <p class="comparisonParagraphs">
-            Train Sim World 2 sells itself to its customers as a hyper realistic train simulator, marketed to hardcore fans of railroading. When it comes to train fans, a more dedicated bunch you will not find. Whether the person is a model railroader, a railfan, or an enjoyer of train simulators, their love for trains cannot be questioned. Most railroad fans can recognize locomotive and freight car types based on a few details and determine the generation of a locomotive by the sound of its engine. The railroad fan community expects great levels of detail from their models and simulations and no mistakes will go unnoticed. So did Train Sim World 2 meet this high standard? Check out the images below to see the comparison between real life and the game!
-        </p>
-    </div>
-    <br>
-    <br>
-    <div class="articleContainer">
-        <p class="comparisonParagraphs">
-            After playing this game and noting all the details on the different locomotives, I’ve got to say I’m quite impressed. Dovetail games (the developers of Train Sim World 2) did a fantastic job with this game. After scrutinizing every detail of the in-game engines, the only slight variation between the in-game engines and real life locomotives was the horn placement on the SD40-2. In-game the horn has been moved in between the radiator and exhaust fans, while in real life it is typically seen at the front of the engine above the headlight. 
-        </p>
-    </div>
-    <br>
-    <br>
-    <div class="articleContainer">
-        <p class="comparisonParagraphs">
-            I’m very happy with the level of detail and functionality the developers have put into this game. Every button and knob, lever and switch does exactly what it would do in real life. Considering that Train Sim World 2 was released for free, it is very pleasing to find the level of detail found in the world’s top simulation games like Digital Combat Simulator World (the world’s top combat aviation simulator). To put it in perspective, Train Sim World 2 gives players access to its base content for free, while DCS World charges by the plane model, with prices from $20.00 - $102.00.
-        </p>
-    </div>
-    <br>
-    <br>
-    <div class="articleContainer">
-        <p class="comparisonParagraphs">
-            With regards to how the locomotives were actually built, Dovetail gave their physics engine a complete overhaul and then proceeded to drag pre-built parts off a toolbar to assemble their behemoths. Dovetail worked extensively with actual locomotive engineers to build these parts and then wrote code to make them behave as they would in real life. In the end, their hard work can be seen in the ways the trains behave. To top it off, the parts even make their own dynamic sounds, groaning and grinding in response to the players actions. These details and elements all come together into a cohesive experience, making for a truly enjoyable game. They really nailed the simulation.
-        </p>
-    </div>
-    <br>
-    <br>
     
+        <br>
+        <div class="articleContainer">
+            <h2 class="articleHeaders">Engine Comparison:</h2>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                Train Sim World 2 sells itself to its customers as a hyper realistic train simulator, marketed to hardcore fans of railroading. When it comes to train fans, a more dedicated bunch you will not find. Whether the person is a model railroader, a railfan, or an enjoyer of train simulators, their love for trains cannot be questioned. Most railroad fans can recognize locomotive and freight car types based on a few details and determine the generation of a locomotive by the sound of its engine. The railroad fan community expects great levels of detail from their models and simulations and no mistakes will go unnoticed. So did Train Sim World 2 meet this high standard? Check out the images below to see the comparison between real life and the game!
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                After playing this game and noting all the details on the different locomotives, I’ve got to say I’m quite impressed. Dovetail games (the developers of Train Sim World 2) did a fantastic job with this game. After scrutinizing every detail of the in-game engines, the only slight variation between the in-game engines and real life locomotives was the horn placement on the SD40-2. In-game the horn has been moved in between the radiator and exhaust fans, while in real life it is typically seen at the front of the engine above the headlight. 
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                I’m very happy with the level of detail and functionality the developers have put into this game. Every button and knob, lever and switch does exactly what it would do in real life. Considering that Train Sim World 2 was released for free, it is very pleasing to find the level of detail found in the world’s top simulation games like Digital Combat Simulator World (the world’s top combat aviation simulator). To put it in perspective, Train Sim World 2 gives players access to its base content for free, while DCS World charges by the plane model, with prices from $20.00 - $102.00.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                With regards to how the locomotives were actually built, Dovetail gave their physics engine a complete overhaul and then proceeded to drag pre-built parts off a toolbar to assemble their behemoths. Dovetail worked extensively with actual locomotive engineers to build these parts and then wrote code to make them behave as they would in real life. In the end, their hard work can be seen in the ways the trains behave. To top it off, the parts even make their own dynamic sounds, groaning and grinding in response to the players actions. These details and elements all come together into a cohesive experience, making for a truly enjoyable game. They really nailed the simulation.
+            </p>
+        <br>
+    </div>
+    <br>
+    <br>
+    <div style="background-image: linear-gradient(#6e6e6e, #8f8f8f); width: 60%; margin-left: 20%;"></div>
     
 {% endblock %}
