--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black
+    background-image: linear-gradient(black, #002933);
 }
 
 .titleDivs {
@@ -9,7 +9,7 @@ body {
     flex-direction: row;
     height: 600px;
     border-style: solid;
-    border-color: #ffb800;
+    border-color: #ff9900;
     overflow:hidden;
     position: relative;
 }
@@ -58,7 +58,7 @@ body {
 
 .articleHeaders {
     font-family: "Teko";
-    color: white;
+    color: rgb(248, 239, 207);
     font-size: 75px;
 }
 
@@ -68,8 +68,9 @@ body {
 }
 
 .comparisonParagraphs {
-    color:white; width: 60%; 
-    text-align: center;
+    color:rgb(248, 239, 207); 
+    width: 60%; 
+    text-align: left;
     font-family: "Roboto";
     font-size: 22px;
 }
