comparison website complete except for images

--- a/finalProject/TSW2/templates/TSW2/comparison.html
+++ b/finalProject/TSW2/templates/TSW2/comparison.html
@@ -3,11 +3,7 @@
 
 {% block body %}
     <div class="titleDivs">
-        <img src="https://www.dropbox.com/s/5vsm3h09n7z32r1/GvR.png?dl=0" class="bgImg">
-
-        <div class="miniTitleDiv" style="margin-left: 60%; margin-bottom: 50px;">
-            <h1 class="titles" style="margin-top:15px; margin-left: 25px;">Gameplay V.S. Reality</h1>
-        </div>
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/gvr-1.png" class="bgImg">
     </div>
     <br>
     <br>
