--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -21,12 +21,11 @@ body {
 }
 
 .bgImg {
-    opacity: 0.3;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
-    height: 150%;
+    height: auto;
     object-fit: contain;
 }
 
