gameplay comparison page is complete

--- a/finalProject/TSW2/templates/TSW2/comparison.html
+++ b/finalProject/TSW2/templates/TSW2/comparison.html
@@ -41,9 +41,16 @@
         </div>
         <br>
         <br>
+        <div class="container" style="margin-left: 30%">
+            <img src="https://static.wikia.nocookie.net/train-sim-world/images/e/e2/20180912165111_1.jpg/revision/latest?cb=20180912155148" style="width:60%">
+            <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/a-long-way-from-home-csx-sd40-2-and-southern-pacific-sd40t-2-in-san-luis-obispo-california-darin-volpe.jpg" style="width: 60%">
+            <p class="comparisonParagraphs" style="font-size: 15px; margin-left: 15%; margin-top: 20px;">Top: TSW2's CSX SD40-2. Bottom: A real CSX SD40-2</p>
+        </div>
+        <br>
+        <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">
-                After playing this game and noting all the details on the different locomotives, I’ve got to say I’m quite impressed. Dovetail games (the developers of Train Sim World 2) did a fantastic job with this game. After scrutinizing every detail of the in-game engines, the only slight variation between the in-game engines and real life locomotives was the horn placement on the SD40-2. In-game the horn has been moved in between the radiator and exhaust fans, while in real life it is typically seen at the front of the engine above the headlight. 
+                After playing this game and noting all the details on the different locomotives, I’ve got to say I’m quite impressed. Dovetail games (the developers of Train Sim World 2) did a fantastic job with this game. I scrutinuzed every detail of the in-game engines, the only slight variation between the in-game engines and real life locomotives was the horn placement on the SD40-2. In-game the horn has been moved in between the radiator and exhaust fans, while in real life it is typically seen at the front of the engine above the headlight. 
             </p>
         </div>
         <br>
@@ -52,6 +59,13 @@
             <p class="comparisonParagraphs">
                 I’m very happy with the level of detail and functionality the developers have put into this game. Every button and knob, lever and switch does exactly what it would do in real life. Considering that Train Sim World 2 was released for free, it is very pleasing to find the level of detail found in the world’s top simulation games like Digital Combat Simulator World (the world’s top combat aviation simulator). To put it in perspective, Train Sim World 2 gives players access to its base content for free, while DCS World charges by the plane model, with prices from $20.00 - $102.00.
             </p>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="margin-left: 30%">
+            <img src="https://static.wikia.nocookie.net/train-sim-world/images/d/d9/20171208173537_1.jpg/revision/latest?cb=20171208174115" style="width:60%">
+            <img src="https://www.sssalesandleasing.com/uploads/listing_mgr/55/large_SAM0164.jpg" style="width: 60%">
+            <p class="comparisonParagraphs" style="font-size: 15px; margin-left: 8%; margin-top: 20px;">Top: The cabin of TSW2's SD40-2. Bottom: Inside the cabin of a real SD40-2</p>
         </div>
         <br>
         <br>
