--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -9,7 +9,19 @@ body {
     flex-direction: row;
     height: 600px;
     border-style: solid;
-        border-color: #ff9900;
+    border-color: #ff9900;
+    overflow:hidden;
+    position: relative;
+}
+
+.titleDivsLg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 990px;
+    border-style: solid;
+    border-color: #ff9900;
     overflow:hidden;
     position: relative;
 }
@@ -17,7 +29,7 @@ body {
 .titles {
     font-family: "Bebas Neue";
     font-size: 100px;
-    color: white;
+    color: rgb(248, 239, 207);
 }
 
 .bgImg {
