--- a/finalProject/TSW2/templates/TSW2/index.html
+++ b/finalProject/TSW2/templates/TSW2/index.html
@@ -2,8 +2,17 @@
 {% load static %}
 
 {% block body %}
-    <div class="titleDivs">
-        <h1 class="titles">HomePage</h1>
+    <div class="titleDivsLg">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/homeheader.png" class="bgImg">
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr style="background-color: rgb(248, 239, 207); width: 80%">
+    <div class="articleContainer">
+        <h2 class="articleHeaders">Video Review:</h2>
     </div>
     
 {% endblock %}
