homepage completed except for added video

--- a/finalProject/TSW2/templates/TSW2/comparison.html
+++ b/finalProject/TSW2/templates/TSW2/comparison.html
@@ -8,6 +8,7 @@
     <br>
     <br>
     <br>
+    <hr style="width: 90%; background-color: rgb(248, 239, 207);">
     <!--video player-->
     <br>
     <div class="articleContainer">
