actually finished the homepage this time

--- a/finalProject/TSW2/templates/TSW2/index.html
+++ b/finalProject/TSW2/templates/TSW2/index.html
@@ -7,19 +7,19 @@
     </div>
     <br>
     <br>
-    <hr style="background-color: rgb(248, 239, 207); width: 80%">
+    <div style="margin-left: 26%">
+        <p class="articleHeaders" style="font-size: 60px; width: 70%; text-align:center; margin-right: 20px">Welcome to Train Sim World 2, the world's premiere train simulation game</p>
+        <br>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 5%">
+            From lightning fast commuter lines, to monstrous unti coal trains,
+            Train Sim World 2 has it all. Spend just a few minutes in the engineer's seat, and you'll find yourself completly immersed in a world filled with
+            speed, power, and sound of screaming steel. Still not convinced that you should be playing Train Sim World 2? Check out the content on this website
+            to get a taste of the game before you try it for yourself.  
+        </p>
+    </div>
+            
+    
     <br>
-        <br>
-        <div class="articleContainer">
-            <p class="comparisonParagraphs" style="text-align: center">
-                Welcome to Train Sim World 2, the world's premiere train simulation game. From lightning fast commuter lines, to monstrous unti coal trains,
-                Train Sim World 2 has it all. Spend just a few minutes in the engineer's seat, and you'll find yourself completly immersed in a world filled with
-                speed, power, and sound of screaming steel. Still not convinced that you should be playing Train Sim World 2? Check out the content on this website
-                to get a taste of the game before you try it for yourself.  
-            </p>
-        </div>
-        <br>
-        <br>
     <hr style="background-color: rgb(248, 239, 207); width: 80%">
     <div class="articleContainer">
         <h2 class="articleHeaders">Video Review:</h2>
