added spotlights page and linked up javascript file

--- a/finalProject/TSW2/static/TSW2/styles.css
+++ b/finalProject/TSW2/static/TSW2/styles.css
@@ -12,6 +12,17 @@ body {
     position: relative;
 }
 
+
+.titleDivsM {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 900px;
+    overflow:hidden;
+    position: relative;
+}
+
 .titleDivsLg {
     display: flex;
     justify-content: center;
