--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'comparison' %}">Gameplay VS Reality</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'spotlights' %}">Location Spotlights</a>
+                    </li>
                     
                 </ul>
             </div>
