added article switching mechanic/working on finishing styling

--- a/finalProject/TSW2/templates/TSW2/spotlights.html
+++ b/finalProject/TSW2/templates/TSW2/spotlights.html
@@ -7,15 +7,149 @@
     </div>
     <br>
     <br>
+    <hr style="background-color:#f8efcf; width: 90%">
+    <br>
+    <br>
     <div class="container" style="display: flex; justify-content:center">
         <div class="btn-group" role="group" style="width: 100%">
-            <button type="button" class="btn btn-secondary">CSX's Sandpatch Grade</button>
-            <button type="button" class="btn btn-secondary">The Bakerloo Line</button>
-            <button type="button" class="btn btn-secondary">Schnellfahrstrecke Köln-Aachen</button>
+            <button type="button" class="btn btn-secondary" style="font-size: 25px;" autofocus value="sandpatch" id="selectorButton">CSX's Sandpatch Grade</button>
+            <button type="button" class="btn btn-secondary" style="font-size: 25px;" value="bakerloo" id="selectorButton">The Bakerloo Line</button>
+            <button type="button" class="btn btn-secondary" style="font-size: 25px;" value="german" id="selectorButton">Schnellfahrstrecke Köln-Aachen</button>
         </div>
     </div>
+
+    <!--div for sandpatch grade-->
+    <div id="sandpatch" class="article">
+        <br>
+        <br>
+        <div class="articleContainer">
+            <h2 class="articleHeaders" style="font-size: 60;">History</h2>
+        </div>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                Sand Patch Grade is a 100 mile section of railroad track joining Pennsylvania and Maryland. Sand Patch Grade was originally constructed by the Pittsburgh & Connelsville Railroad to connect Pittsburgh and Connellsville. An extension of the line to Cumberland, Maryland was authorized in 1853. To get to Cumberland, the railroad had to cross the Allegheny Mountains via a 4,777 foot (1,456 m) long tunnel, which was constructed between 1654 and 1871. At the time, the tunnel was one of the longest in the United States.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                Including the stretch to Cumberland, the line has a total elevation change of 771 feet, with grades as steep as 2%. Due to increased traffic in the early 1900’s the Pittsburgh and Connelsville Railroad built a new tunnel with a less demanding grade and better ventilation between 1911 and 1913. The old tunnel was used until 1917, when it was abandoned.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                The Pittsburgh and Connelsville Railroad eventually became the Pittsburgh Division of the Baltimore & Ohio Railroad, which became a part of the Chessie System in 1972, and then was merged into CSX in 1987. The line is now part of CSX’s Keystone Subdivision, which runs East to West over the Allegheny mountains.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer" style="margin-right: 3%">
+            <h2 class="articleHeaders" style="font-size: 60;">Why Sandpatch Grade was included in TSW2</h2>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">   
+                Train Sim World 2 has recreated a 44.8 mile stretch of the CSX’s Keystone subdivision. In game, the player has the ability to run trains between Cumberland, Maryland and Rockwood, Pennsylvania. This stretch of track is one of the busiest CSX runs, with 30-35 trains passing through in a 24 hour cycle. The line between Cumberland and Rockwood includes the summit of the Allegheny Mountains at Sand Patch, with a grade of 1.94%. This allows the player to take control of through trains trying to struggle up the summit and helper crews, providing a wide variety of possible operations. The replicated area also includes two coal mines, the Shaw and Rockwood mines, both of which are fully functioning in game.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">   
+                Sand Patch Grade allows players to get the full mainline railroading experience. Whether you’re interested in switching in the yard, taking the local freight to pick up some coal cars from one of the two mines, or taking a hotshot intermodal freight up the summit at Sandpatch, Train Sim World 2 lets you do it all. Dovetail made a really smart decision when they chose to replicate this stretch of track, as it features some of the most exciting train operations on the entire East Coast. It provides a challenging, but rewarding experience for the player, as they try to juggle a busy schedule, heavy trains, and challenging terrain. All in all, running trains on Sand Patch Grade is an experience that every train fan can enjoy. 
+            </p>
+        </div>
+        <br>
+        <br>
+    </div>
+
+    <!--div for Bakerloo-->
+    <div id="bakerloo" class="article">
+        <br>
+        <br>
+        <div class="articleContainer">
+            <h2 class="articleHeaders" style="font-size: 60;">History</h2>
+        </div>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                The Bakerloo Line was originally built as the Baker Street & Waterloo railway by the Underground Electric Railways Company of London. The original line was completed between Lambeth North and Baker street on March 10, 1906, but was extended further east to Elephant & Castle five months later on August 5. The original name of the line was concatenated by locals into “Bakerloo Line” as was quickly adopted by locals. The line’s name was officially changed from the Baker Street & Waterloo railway to the Bakerloo Line in July, 1906. 
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                As operations continued, two branch lines were added as traffic on the line grew heavier and heavier. The Watford Branch originally extended to Queen’s Park and Watford Junction from the mainline, but was cut back to Stonebridge Park in 1982 due to reduced traffic. Services were extended as far as Harrow & Wealdston in 1984, and have continued to the present day. When the Bakerloo was extended to Watford in 1915, it also acquired an interchange at Harrow & Wealdstone with another route to Stanmore. The branch was named the Stanmore branch line, which terminated at Stanmore Village station. The line was closed in 1964, due to the success of the rival Metropolitan/Bakerloo Underground line to Stanmore.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer" style="margin-right: 3%">
+            <h2 class="articleHeaders" style="font-size: 60;">Why the Bakerloo was included in TSW2</h2>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">   
+                If Train Sim World 2 was looking to recreate busy subway/underground operations, they made the right choice by recreating the Bakerloo Line. The Bakerloo is the 8th busiest line in the entire underground system, giving the player the experience of running jam packed trains on a tight schedule. Players get to take control of the Mark 2 1972 electric rail car, painted in Iconic Red, Blue, and Grey Underground colors. The Bakerloo provides an accurate recReation of operations on “The Tube '', and boy are they exciting. If you like commuter trains, get your watches and schedules ready, because in TSW2,  rush hour is always just around the corner!
+            </p>
+        </div>
+    </div>
+
+    <!--div for german-->
+    <div id="german" class="article">
+        <br>
+        <br>
+        <div class="articleContainer">
+            <h2 class="articleHeaders" style="font-size: 60;">History</h2>
+        </div>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                The Schenllfahstrecke Köln-Aachen has a long and storied history, beginning with the opening of the first section of track between Cologne and Müngersforf, Germany. The first train between the two towns made the 6.8 km journey on August 2, 1839. Another section was opened between Müngersdorf and Lövenich in July of 1840, and the final extension was made to Aachen on September 1, 1841. The first train ran between Cologne and the Belgium border on October 15, 1843, making it a part of the world’s first cross border railway. 
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                During World Wars One and Two, the line was strategically important for the German army. During both wars, the Schenllfahstrecke Köln-Aachen was used to transport troops, supplies, and weapons for the German’s invasion of France. The line was subject to several attacks during the Second World War, one of which resulted in the deaths of 80 people. The train, made up of locked freight cars, was attacked with bombs and gunfire, resulting in the discontinuation of rail traffic between Aachen and Cologne on November 16, 1944.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">
+                Regular passenger operations were resumed with the withdraw of German forces and regular trains between Aachen and Cologne began running in January 1946. The line was electrified in the late 1950s along with a large portion of other German rail lines. The line was again upgraded in the late 1990s with construction finishing at the end of 2002. The new line now included two main line tracks for high speed ICE trains and one track for S-Bahn commuter trains. The mainline speed for the ICE tracks was capped at 250 kmh.
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer" style="margin-right: 3%">
+            <h2 class="articleHeaders" style="font-size: 60;">Why the Schnellfahrstrecke Köln-Aachen was included in TSW2</h2>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">   
+                If you like speed, this is the line for you. Not only will you be able to run commuter trains between Aachen and Cologne, but the player can also take control of the DB BR 406 ICE 3M, a high speed electric passenger train. Train Sim World has recreated a busy stretch of the German Trans-European transport network with some of the fastest track speeds in the whole network. With a speed limit of 250 kmh (160 mph), players get to zip through the beautiful countryside as they ferry passengers from one destination to the next. 
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="articleContainer">
+            <p class="comparisonParagraphs">   
+                The 70 km stretch between Aachen and Cologne is a perfect setting, allowing the fast trains to stretch their legs, but not covering so much distance as to make the journeys boring. This line is the perfect place for players to experience high speed international railroad operations. Plus, it includes some interesting challenges, like a tunnel and tight curves which force engineers to constantly be managing their speed. So take a seat in the engineer’s chair and strap in, because wherever you’re headed, you’re going there fast! 
+            </p>
+        </div>
+    </div>
+
     <br>
     <br>
+
 {% endblock %}
 
 {% block script %}  
