homepage complete (except for video) and location spotlights complete

--- a/finalProject/TSW2/templates/TSW2/spotlights.html
+++ b/finalProject/TSW2/templates/TSW2/spotlights.html
@@ -10,6 +10,16 @@
     <hr style="background-color:#f8efcf; width: 90%">
     <br>
     <br>
+    <div class="articleContainer">
+        <p class="comparisonParagraphs" style="text-align: center; font-size: 35px;">
+            Interested in knowing a bit more about the three main locations included in Train Sim World 2? Maybe you'd like
+            to see how acurately your favorite location was rebuilt within the game? Click a location below to find out more.
+        </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <!--article selector-->
     <div class="container" style="display: flex; justify-content:center">
         <div class="btn-group" role="group" style="width: 100%">
             <button type="button" class="btn btn-secondary" style="font-size: 25px;" autofocus value="sandpatch" id="selectorButton">CSX's Sandpatch Grade</button>
@@ -17,6 +27,7 @@
             <button type="button" class="btn btn-secondary" style="font-size: 25px;" value="german" id="selectorButton">Schnellfahrstrecke Köln-Aachen</button>
         </div>
     </div>
+    <br>
 
     <!--div for sandpatch grade-->
     <div id="sandpatch" class="article">
@@ -29,6 +40,11 @@
             <p class="comparisonParagraphs">
                 Sand Patch Grade is a 100 mile section of railroad track joining Pennsylvania and Maryland. Sand Patch Grade was originally constructed by the Pittsburgh & Connelsville Railroad to connect Pittsburgh and Connellsville. An extension of the line to Cumberland, Maryland was authorized in 1853. To get to Cumberland, the railroad had to cross the Allegheny Mountains via a 4,777 foot (1,456 m) long tunnel, which was constructed between 1654 and 1871. At the time, the tunnel was one of the longest in the United States.
             </p>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/sandpatch.png" style="width:70%; height:auto">
         </div>
         <br>
         <br>
@@ -46,6 +62,13 @@
         </div>
         <br>
         <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/bo-train.png" style="width:70%; height:auto">
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="articleContainer" style="margin-right: 3%">
             <h2 class="articleHeaders" style="font-size: 60;">Why Sandpatch Grade was included in TSW2</h2>
         </div>
@@ -55,6 +78,11 @@
             <p class="comparisonParagraphs">   
                 Train Sim World 2 has recreated a 44.8 mile stretch of the CSX’s Keystone subdivision. In game, the player has the ability to run trains between Cumberland, Maryland and Rockwood, Pennsylvania. This stretch of track is one of the busiest CSX runs, with 30-35 trains passing through in a 24 hour cycle. The line between Cumberland and Rockwood includes the summit of the Allegheny Mountains at Sand Patch, with a grade of 1.94%. This allows the player to take control of through trains trying to struggle up the summit and helper crews, providing a wide variety of possible operations. The replicated area also includes two coal mines, the Shaw and Rockwood mines, both of which are fully functioning in game.
             </p>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2sandpatch-1.png" style="width:70%; height:auto">
         </div>
         <br>
         <br>
@@ -81,6 +109,11 @@
         </div>
         <br>
         <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/bakerloo1.png" style="width:70%; height:auto">
+        </div>
+        <br>
+        <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">
                 As operations continued, two branch lines were added as traffic on the line grew heavier and heavier. The Watford Branch originally extended to Queen’s Park and Watford Junction from the mainline, but was cut back to Stonebridge Park in 1982 due to reduced traffic. Services were extended as far as Harrow & Wealdston in 1984, and have continued to the present day. When the Bakerloo was extended to Watford in 1915, it also acquired an interchange at Harrow & Wealdstone with another route to Stanmore. The branch was named the Stanmore branch line, which terminated at Stanmore Village station. The line was closed in 1964, due to the success of the rival Metropolitan/Bakerloo Underground line to Stanmore.
@@ -88,8 +121,18 @@
         </div>
         <br>
         <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/bakerloo2.png" style="width:70%; height:auto">
+        </div>
+        <br>
+        <br>
         <div class="articleContainer" style="margin-right: 3%">
             <h2 class="articleHeaders" style="font-size: 60;">Why the Bakerloo was included in TSW2</h2>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2bakerloo.png" style="width:70%; height:auto">
         </div>
         <br>
         <br>
@@ -111,6 +154,11 @@
             <p class="comparisonParagraphs">
                 The Schenllfahstrecke Köln-Aachen has a long and storied history, beginning with the opening of the first section of track between Cologne and Müngersforf, Germany. The first train between the two towns made the 6.8 km journey on August 2, 1839. Another section was opened between Müngersdorf and Lövenich in July of 1840, and the final extension was made to Aachen on September 1, 1841. The first train ran between Cologne and the Belgium border on October 15, 1843, making it a part of the world’s first cross border railway. 
             </p>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2german3-1.png" style="width:70%; height:auto">
         </div>
         <br>
         <br>
@@ -140,10 +188,20 @@
         </div>
         <br>
         <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2germane2.png" style="width:70%; height:auto">
+        </div>
+        <br>
+        <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">   
                 The 70 km stretch between Aachen and Cologne is a perfect setting, allowing the fast trains to stretch their legs, but not covering so much distance as to make the journeys boring. This line is the perfect place for players to experience high speed international railroad operations. Plus, it includes some interesting challenges, like a tunnel and tight curves which force engineers to constantly be managing their speed. So take a seat in the engineer’s chair and strap in, because wherever you’re headed, you’re going there fast! 
             </p>
+        </div>
+        <br>
+        <br>
+        <div class="container" style="display:flex; justify-content:center">
+            <img src="https://williamraineyapplication.files.wordpress.com/2021/10/tsw2german1-1.png" style="width:70%; height:auto">
         </div>
     </div>
 
