homepage fully built out

--- a/finalProject/TSW2/templates/TSW2/index.html
+++ b/finalProject/TSW2/templates/TSW2/index.html
@@ -24,5 +24,14 @@
     <div class="articleContainer">
         <h2 class="articleHeaders">Video Review:</h2>
     </div>
+    <br>
+    <br>
+    <div class="videoDiv">
+        <iframe width="768" height="432" src="https://youtube.com/embed/hxqkzlc8tfo" allowfullscreen frameborder=0>
+        </iframe>
+    </div>
+    <br>
+    <br>
+    
     
 {% endblock %}
